--- a/splash.html
+++ b/splash.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <title>Practice With Forms</title>
+    <title>Splash Page</title>
     <meta charset="utf-8">
     <meta name="description" content="This will help google help you find me">
     <link type="text/css" rel="stylesheet" href="splash.css">
@@ -9,3 +9,4 @@
   <body>
   </body>
 </html>
+
