Added header html to both pages.
This should be unified across the whole site, so it should be the same on every page.
Also, I didn't find actual images. So those are currently just boxes where images should be later.

--- a/splash.html
+++ b/splash.html
@@ -7,6 +7,16 @@
     <link type="text/css" rel="stylesheet" href="splash.css">
   </head>
   <body>
+    <header> <!-- Unified for whole website -->
+      <a href="./splash.html"><img src="logo.jpg" alt="logo" width="125" /></a>
+      <a href="./splash.html"><img src="headerImage.jpg" alt="header" width="125" /></a>
+      <nav>
+        <ul>
+          <li><a href="./splash.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
 
