--- a/about.html
+++ b/about.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <title>Practice With Forms</title>
+    <title>About</title>
     <meta charset="utf-8">
     <meta name="description" content="This will help google help you find me">
     <link type="text/css" rel="stylesheet" href="about.css">
   </head>
   <body>
+    <header> <!-- Unified for whole website -->
+      <a href="./about.html"><img src="logo.jpg" alt="logo" width="125" /></a>
+      <a href="./about.html"><img src="headerImage.jpg" alt="header" width="125" /></a>
+      <nav>
+        <ul>
+          <li><a href="./splash.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
