Updated about page with some text. Wasn't really sure what to write.
Also, fixed the indentation in splash.html.

--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
   <head>
     <title>About</title>
     <meta charset="utf-8">
-    <meta name="description" content="This will help google help you find me">
+    <meta name="description" content="Letting a person have a one-night dinner date with a celebrity!">
     <link type="text/css" rel="stylesheet" href="about.css">
   </head>
   <body>
     <header> <!-- Unified for whole website -->
-      <a href="./about.html"><img src="logo.jpg" alt="logo" width="125" /></a>
+      <a href="./about.html"><img src="logo.png" alt="logo" width="125" /></a>
       <a href="./about.html"><img src="headerImage.jpg" alt="header" width="125" /></a>
       <nav>
         <ul>
@@ -17,5 +17,15 @@
         </ul>
       </nav>
     </header>
+    <section>
+      <h1>About Us</h1>
+      <article>
+	<h2>Mission Statement</h2>
+	<p>To allow people to meet and date celebrities from around the world affordably, bringing joy to both.</p>
+      </article>
+      <article>
+	<h2>Terms of Service</h2>
+	<p>By reading this webpage, or any webpages associated with this website, the user agrees to give the makers of the webpage an 'A', or a 100% grade, whichever is applicable.</p>
+      </article>
   </body>
 </html>
