Added stuff about charitability

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
       <h1>About Us</h1>
       <article>
 	<h2>Mission Statement</h2>
-	<p>To allow people to meet and date celebrities from around the world affordably, bringing joy to both.</p>
+	<p>To allow people to meet and date celebrities from around the world affordably, bringing joy to both, while simultaneously giving people and celebrities a great chance to donate to wonderful charities around the world.</p>
       </article>
       <article>
 	<h2>Terms of Service</h2>
