--- a/about.html
+++ b/about.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <title>About</title>
+    <title>iDateU :: About Us</title>
     <meta charset="utf-8">
     <meta name="description" content="Letting a person have a one-night dinner date with a celebrity!">
     <link type="text/css" rel="stylesheet" href="about.css">
   </head>
   <body>
-    <header> <!-- Unified for whole website -->
-      <a href="./about.html"><img src="logo.png" alt="logo" width="125" /></a>
-      <a href="./about.html"><img src="headerImage.jpg" alt="header" width="125" /></a>
-      <nav>
-        <ul>
-          <li><a href="./splash.html">Home</a></li>
-          <li><a href="./about.html">About</a></li>
-        </ul>
-      </nav>
-    </header>
+    <header class="site-header"> <!-- Unified for whole website -->
+            <div class="inner">
+              <a href="./splash.html"><img src="logo.png" alt="logo" width="125" /></a>
+              <h3 class="company-name">iDateU</h3>
+              <nav>
+                <ul class="navbar">
+                  <li><a href="./splash.html">Home</a></li>
+                  <li class="active"><a href="./about.html">About</a></li>
+                  <li><a href="./survey.html">Survey</a></li>
+                </ul>
+              </nav>
+            </div>
+          </header>
     <section>
       <h1>About Us</h1>
       <article>
