Fixed off-center nav, removed unnecessary divs so that all we have left is a wrapper and a container, similar to what we did in class.

--- a/about.html
+++ b/about.html
@@ -8,8 +8,7 @@
   </head>
   <body>
     <header class="site-header"> <!-- Unified for whole website -->
-            <div class="inner">
-              <a href="./splash.html"><img src="logo.png" alt="logo" width="125" /></a>
+              <a href="./splash.html"><img class="round-img" src="logo.png" alt="logo" width="125" /></a>
               <h3 class="company-name">iDateU</h3>
               <nav>
                 <ul class="navbar">
@@ -18,7 +17,6 @@
                   <li><a href="./survey.html">Survey</a></li>
                 </ul>
               </nav>
-            </div>
           </header>
     <section>
       <h1>About Us</h1>
