--- a/splash.html
+++ b/splash.html
@@ -7,11 +7,9 @@
     <link type="text/css" rel="stylesheet" href="splash.css">
   </head>
   <body>
-    <div class="outer-wrapper">
-      <div class="inner-wrapper">
+    <div class="wrapper">
         <div class="container">
           <header class="site-header"> <!-- Unified for whole website -->
-            <div class="inner">
               <a href="./splash.html"><img class="round-img" src="logo.png" alt="logo" width="125" /></a>
               <h3 class="company-name">iDateU</h3>
               <nav>
@@ -21,12 +19,11 @@
                   <li><a href="./survey.html">Survey</a></li>
                 </ul>
               </nav>
-            </div>
           </header>
             
           <section>
             <h1 class="main-heading">Ever wanted to date the undateable?</h1>
-            <article class="celebrity_pics">
+            <article>
               <img class="round-img" src="emma.jpg" alt="Emma Watson" height="900" width="900" />
               <img class="round-img" src="leonardo.jpg" height="900" width="900" alt="Leonardo Dicaprio" />              
               <p class="lead">At iDateU, we have celebrities from across the world available... for the right price!</p>
@@ -39,7 +36,6 @@
             
           </section>
         </div>
-      </div>  
     </div>
   </body>
 </html>
