--- a/splash.html
+++ b/splash.html
@@ -26,6 +26,8 @@
             <article>
               <img class="round-img" src="emma.jpg" alt="Emma Watson" height="900" width="900" />
               <img class="round-img" src="leonardo.jpg" height="900" width="900" alt="Leonardo Dicaprio" />
+              <img class="round-img" src="brad.jpg" height="900" width="900" alt="Brad Pitt" />
+              <img class="round-img" src="taylor.jpg" height="900" width="900" alt="Taylor Swift" />
               <section id="fixed-pos">             
                 <p class="lead">At iDateU, we have celebrities from across the world available... for the right price!</p>
                 <p class="lead">Our survey will pair you with the perfect celebrity for you.</p>
@@ -41,4 +43,3 @@
     </div>
   </body>
 </html>
-
