Closed <section> tag, now validates correctly

--- a/about.html
+++ b/about.html
@@ -20,19 +20,20 @@
           </header>
     <section>
       <h1>About Us</h1>
-      <article>
+        <article>
 	<h2>Mission Statement</h2>
-	<p>To allow people to meet and date celebrities from around the world affordably, bringing joy to both, while simultaneously giving people and celebrities a great chance to donate to wonderful charities around the world.</p>
-      </article>
+	<p>To allow people to meet and date celebrities from around the world affordably, bringing joy to both, while simultaneously giving people and celebrities a great chance to donate to wonderful charities around the world.     </p>
+        </article>
       <article>
 	<h2>Terms of Service</h2>
 	<p>By reading this webpage, or any webpages associated with this website, the user agrees to give the makers of the webpage an 'A', or a 100% grade, whichever is applicable.</p>
       </article>
       <article>
-	<h2>Rules of engagement:</h2>
+	   <h2>Rules of engagement:</h2>
       
-	<p>If you'd like to request an evening or weekend with one of our celebrities, simply browse our listings (not yet implemented) for bios on your favorites! Click on 'Register Person' and fill out a form (to be implemented) to get a chance to book a date with the person of your dreams. We only charge for a successful event, so feel free to sign up for whatever your heart desires. Prices will vary depending on celebrities. There is no guarantee that you will be able to sign up with any of our clients. Any liability to either you or the celebrity is not handled by our website. Some restrictions apply. Call us today!
-	</p>
+	     <p>If you'd like to request an evening or weekend with one of our celebrities, simply browse our listings (not yet implemented) for bios on your favorites! Click on 'Register Person' and fill out a form (to be implemented) to get a chance to book a date with the person of your dreams. We only charge for a successful event, so feel free to sign up for whatever your heart desires. Prices will vary depending on celebrities. There is no guarantee that you will be able to sign up with any of our clients. Any liability to either you or the celebrity is not handled by our website. Some restrictions apply. Call us today!
+	     </p>
       </article>
+    </section>
   </body>
 </html>
