Closed an unclosed section tag. All html and css files validate now.

--- a/about.html
+++ b/about.html
@@ -34,5 +34,6 @@
 	<p>If you'd like to request an evening or weekend with one of our celebrities, simply browse our listings (not yet implemented) for bios on your favorites! Click on 'Register Person' and fill out a form (to be implemented) to get a chance to book a date with the person of your dreams. We only charge for a successful event, so feel free to sign up for whatever your heart desires. Prices will vary depending on celebrities. There is no guarantee that you will be able to sign up with any of our clients. Any liability to either you or the celebrity is not handled by our website. Some restrictions apply. Call us today!
 	</p>
       </article>
+      </section>
   </body>
 </html>
