--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Letting a person have a one-night dinner date with a celebrity!">
     <link type="text/css" rel="stylesheet" href="about.css">
   </head>
-  <body>
+  <body class="about-body">
     <header class="site-header"> <!-- Unified for whole website -->
               <a href="./splash.html"><img class="round-img" src="logo.png" alt="logo" width="125" /></a>
               <h3 class="company-name">iDateU</h3>
