--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <title>iDateU :: About Us</title>
     <meta charset="utf-8">
     <meta name="description" content="Letting a person have a one-night dinner date with a celebrity!">
-    <link type="text/css" rel="stylesheet" href="about.css">
+    <link type="text/css" rel="stylesheet" href="style.css">
   </head>
   <body class="about-body">
     <header class="site-header"> <!-- Unified for whole website -->
