--- a/splash.html
+++ b/splash.html
@@ -4,7 +4,7 @@
     <title>iDateU :: Home</title>
     <meta charset="utf-8">
     <meta name="description" content="Letting a person have a one-night dinner date with a celebrity!">
-    <link type="text/css" rel="stylesheet" href="splash.css">
+    <link type="text/css" rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="wrapper">
