Moved the images to a separate folder.
It's just a lot easier to view the code this way.

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   </head>
   <body class="about-body">
     <header class="site-header"> <!-- Unified for whole website -->
-              <a href="./splash.html"><img class="round-img" src="logo.png" alt="logo" width="125" /></a>
+              <a href="./splash.html"><img class="round-img" src="imgs/logo.png" alt="logo" width="125" /></a>
               <h3 class="company-name">iDateU</h3>
               <nav>
                 <ul class="navbar">
