--- a/splash.html
+++ b/splash.html
@@ -10,7 +10,7 @@
     <div class="wrapper">
         <div class="container">
           <header class="site-header"> <!-- Unified for whole website -->
-              <a href="./splash.html"><img class="round-img" id="logo" src="logo.png" alt="logo" width="125" /></a>
+              <a href="./splash.html"><img class="round-img" id="logo" src="imgs/logo.png" alt="logo" width="125" /></a>
               <h3 class="company-name">iDateU</h3>
               <nav>
                 <ul class="navbar">
@@ -24,10 +24,10 @@
           <section>
             <h1 class="main-heading">Ever wanted to date the undateable?</h1>
             <article>
-              <img class="round-img" src="emma.jpg" alt="Emma Watson" height="900" width="900" />
-              <img class="round-img" src="leonardo.jpg" height="900" width="900" alt="Leonardo Dicaprio" />
-              <img class="round-img" src="brad.jpg" height="900" width="900" alt="Brad Pitt" />
-              <img class="round-img" src="taylor.jpg" height="900" width="900" alt="Taylor Swift" />
+              <img class="round-img" src="imgs/emma.jpg" alt="Emma Watson" height="900" width="900" />
+              <img class="round-img" src="imgs/leonardo.jpg" height="900" width="900" alt="Leonardo Dicaprio" />
+              <img class="round-img" src="imgs/brad.jpg" height="900" width="900" alt="Brad Pitt" />
+              <img class="round-img" src="imgs/taylor.jpg" height="900" width="900" alt="Taylor Swift" />
               <section id="fixed-pos">             
                 <p class="lead">At iDateU, we have celebrities from across the world available... for the right price!</p>
                 <p class="lead">Our survey will pair you with the perfect celebrity for you.</p>
