--- a/about.html
+++ b/about.html
@@ -8,29 +8,30 @@
   </head>
   <body class="about-body">
     <header class="site-header"> <!-- Unified for whole website -->
-              <a href="./splash.html"><img class="round-img" src="logo.png" alt="logo" width="125" /></a>
-              <h3 class="company-name">iDateU</h3>
-              <nav>
-                <ul class="navbar">
-                  <li><a href="./splash.html">Home</a></li>
-                  <li class="active"><a href="./about.html">About Us</a></li>
-                  <li><a href="./survey.html">Survey</a></li>
-                </ul>
-              </nav>
-          </header>
+      <a href="./splash.html"><img class="round-img" src="imgs/logo.png" alt="logo" width="125" /></a>
+      <h3 class="company-name">iDateU</h3>
+      <nav>
+        <ul class="navbar">
+          <li><a href="./splash.html">Home</a></li>
+          <li class="active"><a href="./about.html">About Us</a></li>
+          <li><a href="./survey.html">Survey</a></li>
+        </ul>
+      </nav>
+    </header>
     <section>
-        <article>
-	     <h2>Mission Statement</h2>
-	       <p>To allow people to meet and date celebrities from around the world affordably, bringing joy to both, while simultaneously giving people and celebrities a great chance to donate to wonderful charities around the world.     
-          </p>
-	   <h2>Rules of engagement:</h2>
-         <p>If you'd like to request an evening or weekend with one of our celebrities, simply browse our listings (coming soon) for bios on your favorites! </br></br>
-    Click on 'Register Person' and fill out a survey (coming soon) to get a chance to book a date with the person of your dreams. </br></br>
-    We only charge for a successful event, so feel free to sign up for whatever your heart desires. Prices will vary depending on celebrities.
-	     </p>
-	   <h2>Terms of Service</h2>
-        <p>There is no guarantee that you will be able to sign up with any of our clients. Any liability to either you or the celebrity is not handled by our website. Some restrictions apply.</br></br>
-      By reading this webpage, or any webpages associated with this website, the user agrees to give the creators of the webpage an 'A', or a 100% grade, whichever is applicable.</p>
+      <article>
+	<h2>Mission Statement</h2>
+        <p>To allow people to meet and date celebrities from around the world affordably, bringing joy to both, while simultaneously giving people and celebrities a great chance to donate to wonderful charities around the world.</p>
+      </article>
+      <article>
+	<h2>Terms of Service</h2>
+	<p>By reading this webpage, or any webpages associated with this website, the user agrees to give the makers of the webpage an 'A', or a 100% grade, whichever is applicable.</p>
+      </article>
+      <article>
+        <h2>Rules of engagement:</h2>
+	
+        <p>If you'd like to request an evening or weekend with one of our celebrities, simply browse our listings (not yet implemented) for bios on your favorites! Click on 'Register Person' and fill out a form (to be implemented) to get a chance to book a date with the person of your dreams. We only charge for a successful event, so feel free to sign up for whatever your heart desires. Prices will vary depending on celebrities. There is no guarantee that you will be able to sign up with any of our clients. Any liability to either you or the celebrity is not handled by our website. Some restrictions apply. Call us today!
+        </p>
       </article>
     </section>
   </body>
