--- a/survey.html
+++ b/survey.html
@@ -3,11 +3,12 @@
   <head>
     <title>Practice with Forms</title>
     <meta charset="utf-8"/>
-    <link rel="stylesheet" type="text/css" href = "style.css"/>    
+    <link rel="stylesheet" type="text/css" href = "style.css"/>
+    <script src="survey.js"></script>
   </head>
   <body>
     <img src="imgs/logo.png"/>
-    <form name="form1" id="form1" method="get">
+    <form name="form1" id="form1" method="get" onsubmit="displayForm(); return false;">
       <fieldset>
         <legend>User Info</legend>
         <label for="First Name" class="labelitem">First Name:</label>
@@ -57,9 +58,16 @@
       
       </fieldset>
       <section id="reset_submit">
-        <input type="reset" value="Reset" />
+        <input type="reset" value="Reset" onclick="resetForm()" />
         <input type="submit" value="Submit" />
       </section>
     </form>
+    <div id="summary_wrapper">
+      <fieldset>
+        <legend>Summary</legend>
+        <section id="summary">
+        </section>
+      </fieldset>
+    </div>
   </body>
 </html>
