--- a/splash.html
+++ b/splash.html
@@ -33,7 +33,7 @@
               <p class="lead">Our survey will pair you with the perfect celebrity for you.</p>
               <p class="lead">Date the celebrity of your dreams while donating to charity!</p>
               <form action="./survey.html">
-                <input type="submit" value="Take our survey now!">
+                <input class="button" type="submit" value="Take our survey now!">
               </form>
             </section>
           </article>     
